wen, with github opacity problem

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 favicon: /favicon.ico
 
 # Set default keywords (Use a comma to separate)
-keywords: "Hexo, NexT"
+keywords: "Wen Zhao, Android"
 
 # Set rss to false to disable feed link.
 # Leave rss as empty to use site's feed link.
@@ -29,11 +29,11 @@ canonical: true
 # When running the site in a subdirectory (e.g. domain.tld/blog), remove the leading slash (/archives -> archives)
 menu:
   home: /
-  #categories: /categories
-  #about: /about
+  categories: /categories
   archives: /archives
-  tags: /tags
+  # tags: /tags
   schedule: /schedule
+  about: /about
   #commonweal: /404.html
 
 
@@ -61,9 +61,9 @@ menu_icons:
 # ---------------------------------------------------------------
 
 # Schemes
-scheme: Muse
+#scheme: Muse
 #scheme: Mist
-#scheme: Pisces
+scheme: Pisces
 
 
 # ---------------------------------------------------------------
@@ -164,8 +164,8 @@ toc:
 
 sidebar:
   # Sidebar Position, available value: left | right
-  position: left
-  #position: right
+  # position: left
+  position: right
 
   # Sidebar Display, available value:
   #  - post    expand on posts automatically. Default.
@@ -247,7 +247,7 @@ mathjax:
 #duoshuo_shortname:
 
 # Disqus
-#disqus_shortname:
+disqus_shortname: wen-blog
 
 # Baidu Share
 # Available value:
@@ -270,7 +270,7 @@ mathjax:
 
 
 # Google Analytics
-#google_analytics:
+google_analytics: UA-85985372-1
 
 # CNZZ count
 #cnzz_siteid:
