--- a/_config.yml
+++ b/_config.yml
@@ -308,9 +308,9 @@ facebook_comments_plugin:
 # Show number of visitors to each article.
 # You can visit https://leancloud.cn get AppID and AppKey.
 leancloud_visitors:
-  enable: false
-  app_id: #<app_id>
-  app_key: #<app_key>
+  enable: true
+  app_id: 2f91Nw2Rt3Bk5fpSN6hsSXtw-gzGzoHsz
+  app_key: FeyhzTJX8MzP8PFjcg5vuJuJ
 
 # Show PV/UV of the website/page with busuanzi.
 # Get more information on http://ibruce.info/2015/04/04/busuanzi/
