--- a/_config.yml
+++ b/_config.yml
@@ -405,7 +405,7 @@ algolia_search:
 #! ---------------------------------------------------------------
 
 # Motion
-use_motion: true
+use_motion: false
 
 # Fancybox
 fancybox: true
